# invenTreee

InvenTree/contrib/container/: .env
InvenTree/src/: hello.py
InvenTree/src/backend/InvenTree/: config_template.yaml  package-lock.json
InvenTree/src/backend/InvenTree/InvenTree/: config.py  settings.py  urls.py
InvenTree/src/backend/InvenTree/audit_log/: admin.py  api.py  middleware.py  models.py  serializers.py  urls.py
InvenTree/src/backend/InvenTree/company/: api.py
InvenTree/src/backend/InvenTree/lead_to_invoice/: MANIFEST.in  __init__.py  admin.py  api.py  apps.py  models.py  plugin.json  plugin.py  pyproject.toml  serializers.py  setup.py  urls.py  utils.py  views.py
InvenTree/src/backend/InvenTree/lead_to_invoice/migrations/: 0001_initial.py  0002_leadtoinvoice.py  0003_lead_lead_number.py  0004_quotation_quotation_number.py  0005_invoice_invoice_number.py  0006_notification_invoice_notification_lead_and_more.py  0007_alter_invoice_options_alter_lead_options_and_more.py  0008_quotation_original_quotation_and_more.py  0009_quotation_items.py  0010_remove_invoice_amount_due.py  0011_invoice_amount_due.py  0012_alter_invoice_lead.py  0013_invoice_total_amount_alter_invoice_lead.py  0014_remove_lead_notes_alter_invoice_created_at_and_more.py
InvenTree/src/backend/InvenTree/part/: admin.py
InvenTree/src/backend/InvenTree/report/: api.py
InvenTree/src/frontend/: package-lock.json  package.json
InvenTree/src/frontend/src/: main.css.ts  router.tsx
InvenTree/src/myenv/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack  runxlrd.py
(+220 files in other folders)
