[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lead_to_invoice"  # Make sure to include this `name` field
version = "0.1.0"
description = "A package to manage leads to invoices"
authors = [{name = "santosh", email = "santoshmudhiraj81@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
dependencies = []
